:books: docs: Nova documentação para rota de login e de cadastro de usuario com middleware
